--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "slidev build",
     "dev": "slidev --open",
     "export": "slidev export",
-		"format": "slidev format"
+		"format": "slidev format",
+		"pre-push": "npm run format && ./scripts/check-base.sh && npm run build"
   },
   "dependencies": {
     "@slidev/cli": "0.49.0-beta.4",
