--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "slidev build",
-    "dev": "slidev --open",
+    "dev": "slidev",
     "export": "slidev export",
 		"format": "slidev format",
 		"pre-push": "npm run format && ./scripts/check-base.sh && npm run build"
