--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "slidev",
     "export": "slidev export",
 		"format": "slidev format",
-		"pre-push": "npm run format && ./scripts/check-base.sh && npm run build"
+		"pre-push": "npm run format && npm run build"
   },
   "dependencies": {
     "@slidev/cli": "0.49.0-beta.4",
