--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "build": "slidev build",
     "dev": "slidev",
     "export": "slidev export",
-		"format": "slidev format",
-		"pre-push": "npm run format && npm run build"
+    "format": "slidev format",
+    "pre-push": "npm run format && npm run build && npm run export"
   },
   "dependencies": {
+    "@iconify-json/mdi": "^1.1.66",
     "@slidev/cli": "0.49.0-beta.4",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "@unocss/preset-uno": "^0.59.4",
-    "playwright-chromium": "^1.43.1",
     "slidev-theme-penguin": "^1.7.1",
     "unplugin-icons": "^0.19.0",
-    "vue": "^3.4.26",
-    "@iconify-json/mdi": "^1.1.66"
+    "vue": "^3.4.26"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.43.1"
   }
 }
